--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,40 @@
 
 .more-pro-logo {
   bottom: -120px;
+  left: -10px;
+}
+
+.project-logo {
+  right: -35px;
+  top: 30%;
+}
+
+.project-logo-rock {
+  bottom: 25%;
+  left: -10px;
+}
+
+.project-logo-3 {
+  right: -5%;
+  bottom: -20%;
+  width: 200px;
+}
+
+.project-img {
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+  border-bottom-left-radius: 50px;
+  /* border-bottom-right-radius: 50%; */
+  border-right: transparent;
+}
+
+.arrow-logo {
+  right: 0;
+  bottom: 0;
+  background-color: #f3f3f3;
+  border: none;
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
+  border-bottom-left-radius: 100px;
+  padding: 20px;
 }
